2007-02-13  Akim Demaille  <demaille@gostai.com>

	Remove UString::(un_)?armor
	* src/ustring.hh, src/ustring.cc (un_armor, armor): Remove.
	* src/uvalue.cc: Just call libport::escape here.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	svn merge -r 857:860 https://svn.gostai.com/svn/kernel1/branches/1.0

	2007-02-13  Akim Demaille  <demaille@gostai.com>
	Handle escapes in the scanner itself
	* src/parser/bison/utoken.l: Do that.
	* src/parser/bison/ugrammar.y: Add a std::string field to %union.
	* src/ustring.cc (armor): Use hex escapes.

	2007-02-13  Akim Demaille  <demaille@gostai.com>
	Rename ugrammar's str as ustr
	* src/parser/bison/ugrammar.y,
	* src/parser/bison/utoken.l: Adjust all uses.

2007-02-13  Akim Demaille  <demaille@gostai.com>
	svn merge -r 832:857 https://svn.gostai.com/svn/kernel1/branches/1.0
	2007-02-13  Akim Demaille  <demaille@gostai.com>

	Remove fast_armor support
	It is way too buggy: the flag is sometimes incorrectly preserved,
	and it focused on too few case: \ and ", while there are many more.
	Besides it had an impact on *all* the UStrings, instead of addressing
	only those that need to.
	* src/ustring.hh, src/ustring.cc: here.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	* src/network/bsdnet/connection.cc: Document MSG_NOSIGNAL.
	* src/network/bsdnet/network.cc: Don't rely on SO_NOSIGPIPE
	being defined.

2007-02-13  Akim Demaille  <akim.demaille@free.fr>

	Add debugging traces to network handling
	* src/network/bsdnet/network.hh
	* src/network/bsdnet/network.cc (Pipe::Pipe): Be useful.
	(Pipe::print, operator<<(ostream, Pipe)): New.
	* src/network/bsdnet/connection.hh,
	* src/network/bsdnet/connection.cc (~Connection): Don't test
	for a null fd: we actually use -1 to this end.
	(Connection::print): New.
	(closeConnection): Do nothing if the fd is -1.
	(doRead, effectiveSend): Use perror.
	Can someone tell me why notifyRead calls doRead instead of
	being doRead?
	(TCPServerPipe::print): New.