@@ -1,5 +1,10 @@
 2007-02-13  Akim Demaille  <demaille@gostai.com>
 
+	Use LIBPORT_FD_ISSET
+	* src/network/bsdnet/network.cc: here.
+
+2007-02-13  Akim Demaille  <demaille@gostai.com>
+
 	Remove UString::(un_)?armor
 	* src/ustring.hh, src/ustring.cc (un_armor, armor): Remove.
 	* src/uvalue.cc: Just call libport::escape here.
